[package]
name = "backend-demo"
version = "0.1.0"
authors = ["Marcos Alejandro <cypherchabon@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend_lib"
path = "src/lib.rs"

[[bin]]
name = "backend_bin"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"